# spin-dev-tools

./: .gitignore  Cargo.toml  Makefile  README.md  package-lock.json  spin.toml
api/: Cargo.toml
api/src/: lib.rs  tools.rs
api/src/tools/: base64.rs  common.rs  json.rs  password.rs  url.rs  uuid.rs
modules/: spin_static_fs.wasm
src/: lib.rs  tools.rs
src/tools/: json.rs  uuid.rs
web/: .env  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
web/src/app/: layout.tsx  page.tsx
web/src/components/: base64.tsx  json.tsx  password.tsx  url.tsx  uuid.tsx  uuidList.tsx
