[package]
name = "api"
authors = ["Fabien D. <fabien@myprod.net>"]
description = "A set of tools"
version = "0.2.0"
edition = "2021"

[lib]
crate-type = [ "cdylib" ]

[dependencies]
# Useful crate to handle errors.
anyhow = "1.0.75"
# Crate to simplify working with bytes.
bytes = "1.5.0"
# General-purpose crate with common HTTP types.
http = "0.2.9"

uuid =  { version="1.5.0", features = ["fast-rng", "v4", "v5", "v6", "v7", "serde"] }
serde = { version="1.0.192", features = ["derive"] }
rand = "0.8.5"
serde_json = "1.0.108"
base64 = "0.21.5"
urlencoding = "2.1.3"
passwords = "3.1.16"

# The Spin SDK.
spin-sdk = { git = "https://github.com/fermyon/spin", tag = "v2.1.0" }
# Crate that generates Rust Wasm bindings from a WebAssembly interface.
wit-bindgen-rust = { git = "https://github.com/bytecodealliance/wit-bindgen" }

[workspace]