[package]
name = "api"
authors = ["Fabien D. <fabien@myprod.net>"]
description = "A set of tools"
version = "0.3.0"
edition = "2021"

[lib]
crate-type = [ "cdylib" ]

[dependencies]
# Useful crate to handle errors.
anyhow = "1.0.95"
# Crate to simplify working with bytes.
bytes = "1.9.0"
# General-purpose crate with common HTTP types.
http = "1.2.0"

uuid =  { version="1.11.0", features = ["fast-rng", "v4", "v5", "v6", "v7", "serde"] }
serde = { version="1.0.216", features = ["derive"] }
rand = "0.8.5"
serde_json = "1.0.134"
base64 = "0.22.1"
urlencoding = "2.1.3"
passwords = "3.1.16"

# The Spin SDK.
spin-sdk = "3.1.0"
# Crate that generates Rust Wasm bindings from a WebAssembly interface.
wit-bindgen-rust = { git = "https://github.com/bytecodealliance/wit-bindgen" }

[workspace]